menambahkan map dan jenis pelayanan

--- a/index.html
+++ b/index.html
@@ -259,6 +259,17 @@
                 <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Pelayanan 24/7</p>
                 <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
               </div>
+              <div class="bg-light p-4">
+                <!-- <div class="d-flex align-items-center justify-content-center border border-5 border-white mb-4" style="width: 75px; height: 75px">
+                  <i class="fa fa-shower fa-2x text-primary"></i>
+                </div> -->
+                <h4 class="mb-3">Jual/Beli AC</h4>
+                <p>Jual/Beli Ac baru/second, tukar/tambah ac second.</p>
+                <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Kualitas pelayanan</p>
+                <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Teknisi profesional</p>
+                <p class="text-primary fw-medium"><i class="fa fa-check text-success me-2"></i>Pelayanan 24/7</p>
+                <!-- <a href="" class="btn bg-white text-primary w-100 mt-2">Read More<i class="fa fa-arrow-right text-secondary ms-2"></i></a> -->
+              </div>
             </div>
           </div>
         </div>
@@ -313,7 +324,7 @@
         <div class="row g-5">
           <div class="col-lg-6 col-md-6">
             <h4 class="text-light mb-4">Alamat</h4>
-            <p class="mb-2 footer-alamat"><i class="fa fa-map-marker-alt me-3"></i><a href="">Jl. Abikusno Cokro Suyoso RT 14 RW 03 no 874 Kertapati Palembang</a></p>
+            <p class="mb-2 footer-alamat"><i class="fa fa-map-marker-alt me-3"></i><a href="https://maps.app.goo.gl/MEjgRkyg7yCBPpLZ7">Jl. Abikusno Cokro Suyoso RT 14 RW 03 no 874 Kertapati Palembang</a></p>
             <p class="mb-2 footer-contact"><i class="fa fa-phone-alt me-3"></i><a href="https://wa.me/6285838764279">+62 858 3876 4279</a></p>
             <p class="mb-2 footer-email"><i class="fa fa-envelope me-3"></i><a href="mailto:sejukberkahteknik@gmail.com">sejukberkahteknik@gmail.com</a></p>
           </div>
@@ -328,6 +339,7 @@
             <p class="btn btn-link" href="">Mesin Cuci</p>
             <p class="btn btn-link" href="">Bongkar Pasang</p>
             <p class="btn btn-link" href="">Instalasi Listrik</p>
+            <p class="btn btn-link" href="">Jual ac baru/second</p>
           </div>
         </div>
       </div>
