mengganti gambar dan menambahan judul

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="row justify-content-start">
                 <div class="col-10 col-lg-8">
                   <h5 class="text-white text-uppercase mb-3 animated slideInDown">SEJUK BERKAH TEKNIK</h5>
-                  <h1 class="display-3 text-white animated slideInDown mb-4">Spesialis Perbaikan Dan Perawatan AC</h1>
+                  <h1 class="display-3 text-white animated slideInDown mb-4">Spesialis Servcice AC, Kulkas, Mesin Cuci, Jual Beli AC Baru dan Bekas</h1>
                   <p class="fs-5 fw-medium text-white mb-4 pb-2">Kepuasan pelanggan adalah prioritas utama kami dengan ditangani teknisi-teknisi handal dan profesional serta berpengalaman.</p>
                   <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                   <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Free Quote</a> -->
@@ -164,10 +164,11 @@
         <div class="row g-5">
           <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="text-secondary text-uppercase">Tentang Kami</h6>
-            <h1 class="mb-4">Sejuk Berkah Teknik Menangani Perbaikan AC, Kulkas, Mesin Cuci, Instalasi.</h1>
+            <h1 class="mb-4">Sejuk Berkah Teknik Menangani Perbaikan AC, Kulkas, Mesin Cuci, Instalasi, Jual AC Baru/Bekas, Tukar Tambah AC</h1>
             <p class="mb-4">
-              Kami menangani berbagai kerusakan semua jenis <span class="fw-bold">ac seperti isi freon, bongkar pasang, perbaikan kebocoran, perbaikan kulkas, mesin cuci, instalasi listrik dll</span> untuk perumahan, perkantoran, gedung
-              bertingkat, pabrik, Yayasan, masjid dll. dan pelayanam kami menjangkau kota <span class="text-warning">Palembang</span> dan <span class="fw-bold">sekitarnya</span> serta kota-kota lainnya.
+              Kami menangani berbagai kerusakan semua jenis
+              <span class="fw-bold">ac seperti isi freon, bongkar pasang, perbaikan kebocoran, perbaikan kulkas, mesin cuci, instalasi listrik dll dan juga menjual dan membeli ac baru dan bekas dengan jaminan garansi</span> untuk perumahan,
+              perkantoran, gedung bertingkat, pabrik, Yayasan, masjid dll. dan pelayanam kami menjangkau kota <span class="text-warning">Palembang</span> dan <span class="fw-bold">sekitarnya</span> serta kota-kota lainnya.
             </p>
             <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Teknisi berpengalaman</p>
             <p class="fw-medium text-primary"><i class="fa fa-check text-success me-3"></i>Harga terjangkau</p>
@@ -201,7 +202,7 @@
           <div class="ms-lg-5 ps-lg-5">
             <div class="text-center text-lg-start wow fadeInUp" data-wow-delay="0.1s">
               <h6 class="text-secondary text-uppercase">Pelayanan</h6>
-              <h1 class="mb-5">Melayani jenis-jenis perbaikan</h1>
+              <h1 class="mb-5">Melayani perbaikan dan jual beli ac baru/secound</h1>
             </div>
             <div class="owl-carousel service-carousel position-relative wow fadeInUp" data-wow-delay="0.1s">
               <div class="bg-light p-4">
@@ -288,7 +289,7 @@
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="team-item">
               <div class="position-relative overflow-hidden">
-                <img class="img-fluid" src="img/7.jpg" alt="" />
+                <img class="img-fluid" src="img/7 (2).jpg" alt="" />
               </div>
             </div>
           </div>
@@ -309,7 +310,7 @@
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
             <div class="team-item">
               <div class="position-relative overflow-hidden">
-                <img class="img-fluid" src="img/10.jpg" alt="" />
+                <img class="img-fluid" src="img/10 (2).jpg" alt="" />
               </div>
             </div>
           </div>
